# xsoc_stm32wb

./: CMakeLists.txt
rm0434/: DMA.hpp  config.hpp  rcc.hpp
rm0434/clocks/sources/: hse.cpp
rm0434/peripherals/ADC/: ADC.cpp  ADC.hpp
rm0434/peripherals/AES/: AES.cpp  AES.hpp
rm0434/peripherals/GPIO/: GPIO.cpp  GPIO.hpp  gpio_ll.hpp
rm0434/peripherals/I2C/: I2C.cpp  I2C.hpp
rm0434/peripherals/Public_key_accelerator/: Public_key_accelerator.cpp  Public_key_accelerator.hpp
rm0434/peripherals/SPI/: SPI.cpp  SPI.hpp
rm0434/peripherals/Timer/: LPTIM.cpp  LPTIM.hpp  TIM.cpp  TIM.hpp
rm0434/peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp  base.hpp  usart_ll.hpp
rm0434/peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  internal_flash_ll.hpp  option_bytes.cpp  option_bytes.hpp
rm0434/peripherals/pka/: pka.cpp  pka.hpp
rm0434/peripherals/rng/: rng.cpp  rng.hpp
rm0434/peripherals/rtc/: rtc.cpp  rtc.hpp
rm0434/peripherals/wwdg/: wwdg.cpp  wwdg.hpp
rm0434/system/mcu/: mcu.hpp
rm0434/system/pwr/: pwr.cpp  pwr.hpp
rm0434/utils/: tick_counter.cpp  tick_counter.hpp  wait_until.hpp
